Enhancements for adjusting sub plot height/top

--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -184,7 +184,7 @@
                             <br>
                             <div class="row mb-3">
                                 <div>
-                                    <label for="chart-height-input" class="form-label">Subplot Height</label>
+                                    <label for="chart-height-input" class="form-label">Height</label>
                                     <input type="range" id="chart-height-input" class="form-range" value="19" min="1"
                                            max="70" step="1" onchange="updateSubPlotHeight(this.value);">
                                     <output style="display: block; text-align:center;" type="text"
@@ -211,11 +211,10 @@
                             </div>
                             <div class="row mb-3">
                                 <div>
-                                    <label class="form-label">Subplot Top Margin</label>
-                                    <input type="range" id="chart-top-input" class="form-range" value="4" min="0"
+                                    <label class="form-label">Top Margin</label>
+                                    <input type="range" id="chart-top-input" class="form-range" value="6.5" min="0"
                                            max="25" step="0.1" onchange="updateSubPlotTopMargin(this.value);">
-                                    <output style="display: block; text-align:center;" type="text" id="chart-top-output">
-                                        4<span>%</span></output>
+                                    <output style="display: block; text-align:center;" type="text" id="chart-top-output">6.5<span>%</span></output>
                                 </div>
                             </div>
                         </div>
