--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -133,7 +133,7 @@
                                         <label class="form-check-label" for="toggle-tooltip-non-variant-sites">Non
                                             Variant Sites</label>
                                         <input class="form-check-input" type="checkbox"
-                                               id="toggle-tooltip-non-variant-sites" checked>
+                                               id="toggle-tooltip-non-variant-sites" unchecked>
                                     </div>
                                 </div>
                             </div>
@@ -144,6 +144,15 @@
                                             Sites/Coverage Stat Comparison</label>
                                         <input class="form-check-input" type="checkbox" id="toggle-variant-comparison"
                                                checked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-coverage-stat">Coverage Statistics</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-coverage-stat"
+                                               unchecked>
                                     </div>
                                 </div>
                             </div>
@@ -210,12 +219,12 @@
                                 <label class="form-label">Height</label>
                                 <div class="row">
                                     <div class="col-md-10">
-                                        <input type="range" id="genefeature-height-input" class="form-range" value="15" min="1"
-                                       max="50" step="1" onchange="updateGeneFeatureHeight(this.value);">
+                                        <input type="range" id="genefeature-height-input" class="form-range" value="15.0" min="1.0"
+                                       max="50.0" step="0.1" onchange="updateGeneFeatureHeight(this.value);">
                                     </div>
                                     <div class="col-md-2">
                                         <output style="display: block; text-align:center;" type="text"
-                                        id="genefeature-height-output">15<span>%</span></output>
+                                        id="genefeature-height-output">15.0<span>%</span></output>
                                     </div>
                                 </div>
                             </div>
@@ -246,11 +255,87 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#chartproperties" aria-expanded="false" aria-controls="chartproperties">
-                            Advanced Options
+                                data-bs-target="#grid-display" aria-expanded="false" aria-controls="grid-display">
+                            Grid Configurations
                         </button>
                     </h2>
-                    <div id="chartproperties" class="accordion-collapse collapse">
+                    <div id="grid-display" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="row mb-3">
+                                <div>
+                                    <label for="chart-height-input" class="form-label">Subplot Height</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-height-input" class="form-range" value="19.0"
+                                                   min="1.0" max="70.0" step="0.1" onchange="updateSubPlotHeight(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text"
+                                            id="chart-height-output">19.0<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <label for="chart-left-input" class="form-label">Left Margin</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-left-input" class="form-range" value="4.0" min="1.0"
+                                           max="50.0" step="0.1" onchange="updateChartLeftMargin(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text"
+                                            id="chart-left-output">4.0<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <label for="chart-right-input" class="form-label">Right Margin</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-right-input" class="form-range" value="4.0" min="1.0"
+                                           max="50.0" step="0.1" onchange="updateChartRightMargin(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text"
+                                            id="chart-right-output">4.0<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <label class="form-label"> Subplot Top Margin</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-top-input" class="form-range" value="6.5" min="0.0"
+                                           max="25.0" step="0.1" onchange="updateSubPlotTopMargin(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text" id="chart-top-output">6.5<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-md">
+                                    <button class="btn btn-outline-secondary" onclick="resetGridDisplay()">Reset Grid Display</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#renderer-env" aria-expanded="false" aria-controls="renderer-env">
+                            Renderer Environment
+                        </button>
+                    </h2>
+                    <div id="renderer-env" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <div class="row mb-3">
                                 <label for="render-env" class="col-sm-4 col-form-label">Renderer</label>
@@ -266,65 +351,6 @@
                                     <div class="form-check form-switch">
                                         <label class="form-check-label" for="toggle-darkmode">Dark Mode</label>
                                         <input class="form-check-input" type="checkbox" id="toggle-darkmode" unchecked>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div>
-                                    <label for="chart-height-input" class="form-label">Subplot Height</label>
-                                    <div class="row">
-                                        <div class="col-md-10">
-                                            <input type="range" id="chart-height-input" class="form-range" value="19"
-                                                   min="1" max="70" step="1" onchange="updateSubPlotHeight(this.value);">
-                                        </div>
-                                        <div class="col-md-2">
-                                            <output style="display: block; text-align:center;" type="text"
-                                            id="chart-height-output">19<span>%</span></output>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div>
-                                    <label for="chart-left-input" class="form-label">Left Margin</label>
-                                    <div class="row">
-                                        <div class="col-md-10">
-                                            <input type="range" id="chart-left-input" class="form-range" value="4" min="1"
-                                           max="50" step="1" onchange="updateChartLeftMargin(this.value);">
-                                        </div>
-                                        <div class="col-md-2">
-                                            <output style="display: block; text-align:center;" type="text"
-                                            id="chart-left-output">4<span>%</span></output>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div>
-                                    <label for="chart-right-input" class="form-label">Right Margin</label>
-                                    <div class="row">
-                                        <div class="col-md-10">
-                                            <input type="range" id="chart-right-input" class="form-range" value="4" min="1"
-                                           max="50" step="1" onchange="updateChartRightMargin(this.value);">
-                                        </div>
-                                        <div class="col-md-2">
-                                            <output style="display: block; text-align:center;" type="text"
-                                            id="chart-right-output">4<span>%</span></output>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div>
-                                    <label class="form-label"> Subplot Top Margin</label>
-                                    <div class="row">
-                                        <div class="col-md-10">
-                                            <input type="range" id="chart-top-input" class="form-range" value="6.5" min="0"
-                                           max="25" step="0.1" onchange="updateSubPlotTopMargin(this.value);">
-                                        </div>
-                                        <div class="col-md-2">
-                                            <output style="display: block; text-align:center;" type="text" id="chart-top-output">6.5<span>%</span></output>
-                                        </div>
                                     </div>
                                 </div>
                             </div>
