--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -52,10 +52,10 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#axis" aria-expanded="false" aria-controls="axis">Y-axis
+                                data-bs-target="#yaxis" aria-expanded="false" aria-controls="yaxis">Y-axis
                         </button>
                     </h2>
-                    <div id="axis" class="accordion-collapse collapse">
+                    <div id="yaxis" class="accordion-collapse collapse">
                         <div class="accordion-body">
                             <div class="mb-3 row">
                                 <label for="scale" class="col-sm-4 col-form-label">Scaling</label>
@@ -76,6 +76,23 @@
                                             Set
                                         </button>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#xaxis" aria-expanded="false" aria-controls="xaxis">X-axis
+                        </button>
+                    </h2>
+                    <div id="xaxis" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="mb-3 row">
+                                <div class="form-check form-switch">
+                                    <label class="form-check-label" for="toggle-xaxis-label">Show X-axis Label</label>
+                                    <input class="form-check-input" type="checkbox" id="toggle-xaxis-label" checked>
                                 </div>
                             </div>
                         </div>
@@ -367,8 +384,12 @@
                         <div class="accordion-body">
                             <div class="row mb-3">
                                 <div class="form-check form-switch">
-                                    <label class="form-check-label" for="toggle-mutation">Show Mutation</label>
+                                    <label class="form-check-label" for="toggle-mutation">Show Mutations</label>
                                     <input class="form-check-input" type="checkbox" id="toggle-mutation" unchecked>
+                                </div>
+                                <div class="form-check form-switch">
+                                    <label class="form-check-label" for="toggle-hideoverlap-mutation">Hide Overlapping Mutations</label>
+                                    <input class="form-check-input" type="checkbox" id="toggle-hideoverlap-mutation" checked>
                                 </div>
                                 <div>
                                     <label for="varmap-height-input" class="form-label">Variant Heatmap Height</label>
