clean up the whole code

--- a/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
@@ -207,7 +207,7 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="col-md">
-                                    <button class="btn btn-outline-primary" onclick="setDataZoom(null, null)">Set zoom</button>
+                                    <button class="btn btn-outline-primary" onclick="setDataZoom(0, 0)">Set zoom</button>
                                 </div>
                                 <div class="col-md">
                                     <button class="btn btn-outline-secondary" onclick="setDataZoom(1, {{ref_seq_length}})">Reset zoom
