--- a/wgscovplot/tmpl/wgscovplot_prod_template.html
+++ b/wgscovplot/tmpl/wgscovplot_prod_template.html
@@ -10,7 +10,7 @@
 <body>
 
     {% block content%}
-        {% include "wgscovplot_controlmenu_gui.html" %}
+        {% include "wgscovplot_gui.html" %}
     {% endblock %}
     <script type="text/javascript">
         {% include "js/wgscovplot.js" %}
