--- a/wgscovplot/tmpl/wgscovplot_flu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_gui.html
@@ -57,6 +57,131 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#yaxis" aria-expanded="false" aria-controls="yaxis">Y-axis
+                        </button>
+                    </h2>
+                    <div id="yaxis" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="mb-3 row">
+                                <label for="scale" class="col-sm-4 col-form-label">Scaling</label>
+                                <div class="col-sm-8">
+                                    <select class="form-select" id="scale" onchange="setScale()">
+                                        <option value="value">Linear</option>
+                                        <option value="log" selected>Log</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="ymax" class="col-sm-4 col-form-label">Y-axis Limit</label>
+                                <div class="col-sm-8">
+                                    <div class="input-group">
+                                        <input class="form-control" type="number" id="ymax" value={{ max_depth }}
+                                               style="width: 30%">
+                                        <button class="btn btn-primary" type="button" type="button" onclick="setYMax()">
+                                            Set
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#xaxis" aria-expanded="false" aria-controls="xaxis">X-axis
+                        </button>
+                    </h2>
+                    <div id="xaxis" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="mb-3 row">
+                                <div class="form-check form-switch">
+                                    <label class="form-check-label" for="toggle-xaxis-label">Show X-axis Label</label>
+                                    <input class="form-check-input" type="checkbox" id="toggle-xaxis-label" checked>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#grid-display" aria-expanded="false" aria-controls="grid-display">
+                            Grid Configurations
+                        </button>
+                    </h2>
+                    <div id="grid-display" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="row mb-3">
+                                <div>
+                                    <label for="chart-height-input" class="form-label">Subplot Height</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-height-input" class="form-range" value="19.0"
+                                                   min="1.0" max="70.0" step="0.1" onchange="updateSubPlotHeight(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text"
+                                            id="chart-height-output">19.0<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <label for="chart-left-input" class="form-label">Left Margin</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-left-input" class="form-range" value="4.0" min="1.0"
+                                           max="50.0" step="0.1" onchange="updateChartLeftMargin(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text"
+                                            id="chart-left-output">4.0<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <label for="chart-right-input" class="form-label">Right Margin</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-right-input" class="form-range" value="4.0" min="1.0"
+                                           max="50.0" step="0.1" onchange="updateChartRightMargin(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text"
+                                            id="chart-right-output">4.0<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <label class="form-label"> Subplot Top Margin</label>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <input type="range" id="chart-top-input" class="form-range" value="6.5" min="0.0"
+                                           max="25.0" step="0.1" onchange="updateSubPlotTopMargin(this.value);">
+                                        </div>
+                                        <div class="col-md-2">
+                                            <output style="display: block; text-align:center;" type="text" id="chart-top-output">6.5<span>%</span></output>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-md">
+                                    <button class="btn btn-outline-secondary" onclick="resetGridDisplay()">Reset Grid Display</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#renderer-env" aria-expanded="false" aria-controls="renderer-env">
                             Renderer Environment
                         </button>
