add variants plot

--- a/wgscovplot/tmpl/wgscovplot_flu_template.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_template.html
@@ -20,6 +20,8 @@
         window.samples = {{ samples_name }}
         window.segments = {{ segments_name }}
         window.depths = {{ depths_data }}
+        window.variants = {{ variants_data }}
+        window.ref_seq = {{ ref_seq }}
 
         function updateChartDivSize() {
             let BOTTOM_PADDING = 20;
