tooltips for variants sites

--- a/wgscovplot/tmpl/wgscovplot_flu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_gui.html
@@ -106,6 +106,84 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#tooltips" aria-expanded="false" aria-controls="axis">Tooltips
+                        </button>
+                    </h2>
+                    <div id="tooltips" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-tooltip">Enable</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-tooltip" checked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="fix-tooltip-postion">Fix Tooltip
+                                            Position</label>
+                                        <input class="form-check-input" type="checkbox" id="fix-tooltip-postion"
+                                               unchecked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-tooltip-trigger-click">Trigger On
+                                            Click</label>
+                                        <input class="form-check-input" type="checkbox"
+                                               id="toggle-tooltip-trigger-click" unchecked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-tooltip-variant-sites">Variant
+                                            Sites</label>
+                                        <input class="form-check-input" type="checkbox"
+                                               id="toggle-tooltip-variant-sites" checked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-tooltip-non-variant-sites">Non
+                                            Variant Sites</label>
+                                        <input class="form-check-input" type="checkbox"
+                                               id="toggle-tooltip-non-variant-sites" unchecked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-variant-comparison">Variant
+                                            Sites/Coverage Stat Comparison</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-variant-comparison"
+                                               checked>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div>
+                                    <div class="form-check form-switch">
+                                        <label class="form-check-label" for="toggle-coverage-stat">Coverage Statistics</label>
+                                        <input class="form-check-input" type="checkbox" id="toggle-coverage-stat"
+                                               unchecked>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#grid-display" aria-expanded="false" aria-controls="grid-display">
                             Grid Configurations
                         </button>
