to be continued for flu P1

--- a/wgscovplot/tmpl/wgscovplot_flu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_gui.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <span class="navbar-brand mb-0 h1">WGSCOVPLOT</span>
         <div class="navbar-nav nav me-auto mb-2 mb-lg-0">
@@ -316,7 +316,7 @@
     </div>
 
     <div class="tab-pane" id="summary-table" role="tabpanel">
-        <div class="" container-fluid>
+        <div class="container-fluid" >
             {{ coverage_stat }}
         </div>
     </div>
