--- a/wgscovplot/tmpl/wgscovplot_flu_gui.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_gui.html
@@ -270,6 +270,10 @@
                                     <input class="form-check-input" type="checkbox" id="toggle-mutation" unchecked>
                                 </div>
                                 <div class="form-check form-switch">
+                                    <label class="form-check-label" for="toggle-mutation">Low Coverage Regions Label </label>
+                                    <input class="form-check-input" type="checkbox" id="toggle-low-coverage-regions" unchecked>
+                                </div>
+                                <div class="form-check form-switch">
                                     <label class="form-check-label" for="toggle-hideoverlap-mutation">Hide Overlapping Mutations</label>
                                     <input class="form-check-input" type="checkbox" id="toggle-hideoverlap-mutation" checked>
                                 </div>
