--- a/wgscovplot/tmpl/wgscovplot_flu_template.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_template.html
@@ -34,6 +34,7 @@
         window.variants = {{ variants_data }}
         window.refSeq = {{ ref_seq }}
         window.refID = {{ ref_id }}
+        window.lowCoverageRegions = {{ low_coverage_regions }}
 
         function updateChartDivSize() {
             let BOTTOM_PADDING = 20;
