dymanically low coverage threshold

--- a/wgscovplot/tmpl/wgscovplot_flu_template.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_template.html
@@ -35,6 +35,7 @@
         window.refSeq = {{ ref_seq }}
         window.refID = {{ ref_id }}
         window.lowCoverageRegions = {{ low_coverage_regions }}
+        window.lowCoverageThreshold = {{ low_coverage_threshold }}
 
         function updateChartDivSize() {
             let BOTTOM_PADDING = 20;
