--- a/wgscovplot/tmpl/wgscovplot_flu_template.html
+++ b/wgscovplot/tmpl/wgscovplot_flu_template.html
@@ -36,6 +36,7 @@
         window.refID = {{ ref_id }}
         window.lowCoverageRegions = {{ low_coverage_regions }}
         window.lowCoverageThreshold = {{ low_coverage_threshold }}
+        const primerData = {{ primer_data }}
 
         function updateChartDivSize() {
             let BOTTOM_PADDING = 20;
